--- a/views/reg.ejs
+++ b/views/reg.ejs
@@ -40,7 +40,17 @@
       </div>
     </fieldset>
   </form>
-  <div><%= errors %></div>
+
+  <% if (success) { %>
+      <div class="alert alert-success">
+      <%= success %>
+      </div>
+  <% } %>
+  <% if (error) { %>
+      <div class="alert alert-error">
+      <%= error %>
+      </div>
+  <% } %>
 
 </body>
 
