--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,14 +15,12 @@
   <% include ./error %>
 
   <form class="form-horizontal" method="post">
-    
     <fieldset>
-      <legend>用户注册</legend>
+      <legend>用户登入</legend>
       <div class="control-group">
         <label class="control-label" for="username">用户名</label>
         <div class="controls">
           <input type="text" class="input-xlarge" id="username" name="username">
-          <p class="help-block">你的账户名称，用于登录和显示。</p>
         </div>
       </div>
       <div class="control-group">
@@ -31,14 +29,8 @@
           <input type="password" class="input-xlarge" id="password" name="password">
         </div>
       </div>
-      <div class="control-group">
-        <label class="control-label" for="password-repeat">重复输入口令</label>
-        <div class="controls">
-          <input type="password" class="input-xlarge" id="password-repeat" name="password-repeat">
-        </div>
-      </div>
       <div class="form-actions">
-        <button type="submit" class="btn btn-primary">注册</button>
+        <button type="submit" class="btn btn-primary">登入</button>
       </div>
     </fieldset>
   </form>
